--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "immutable": "^3.8.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "es-no-build": "^0.1.0",
+    "systemjs-builder": "^0.15.32"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
