--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   },
   "devDependencies": {
     "es-no-build": "^0.1.0",
+    "http-server": "^0.9.0",
     "systemjs-builder": "^0.15.32"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "http-server"
   },
   "repository": {
     "type": "git",
